[package]
name = "fast_interpolation"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff-optimized = "0.4.1"
ark-poly = "0.4.0"
ark-ff = "0.4.0"
num-traits = "0.2.19"
stwo-prover = { path = "../stwo/crates/prover" }
bitvec = "1.0.1"
rand = "0.9.0"
rayon = "1.10.0"
bincode = { version = "2.0.1", features = ["serde"] }
serde_json = "1.0.140"
num = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "interpolation"
path = "benches/interpolation.rs"
harness = false
[profile.release]
debug = true
