[package]
name = "fast_interpolation"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.4.1"
ark-poly = "0.4.1"
ark-ff-optimized = { path = "../optimized-fields" }
lambdaworks-math = "0.12.0"
num-traits = "0.2"
rayon = "1.8"
bincode = "1.3"
stwo-prover = { path = "../stwo/crates/prover" }
frieda = { path = "../frieda" }
bitvec = "1.0.1"
rand = "0.9.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "interpolation"
path = "benches/interpolation.rs"
harness = false
[profile.release]
debug = true
